--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/main.css">
-    <!-- <link rel="stylesheet" href="css/main_dark.css"> -->
+    <link rel="stylesheet" href="css/main_dark.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,300;8..144,400;8..144,700;8..144,800;8..144,900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="wrapper">
-		<!-- pop-up start-->
+		
 		
 			<div class="pop-exit" id="popExit">
 				<div class="pop-exit__container">
@@ -281,22 +281,22 @@
 				</div>
 			</div>
 		
-		<!-- pop-up end-->
+		
 
 		<header class="header">
 			<div class="container">
 				<div class="header__block">
 					<div class="header__logo _show _light">
-						<a href="" target="_self"><img src="images/logo.png" alt="logo"></a>
+						<a href="" target="_self"><img src="./vite-project/public/logo.png" alt="logo"></a>
 					</div>
 					<div class="header__logo _dark">
-						<a href="" target="_self"><img src="images/logo_dark.png" alt="logo"></a>
+						<a href="" target="_self"><img src="./vite-project/public/logo_dark.png" alt="logo"></a>
 					</div>
 					<nav class="header__nav">
 						<button class="header__btn-main-new _hover01" id="btnMainNew"><a href="#popNewCard">Создать новую задачу</a></button>
 						<a href="#user-set-target" class="header__user _hover02">Ivan Ivanov</a>
 						<div class="header__pop-user-set pop-user-set" id="user-set-target">
-							<!-- <a href="">x</a> -->
+							<a href="">x</a>
 							<p class="pop-user-set__name">Ivan Ivanov</p>
 							<p class="pop-user-set__mail">ivan.ivanov@gmail.com</p>
 							<div class="pop-user-set__theme">
